--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "node index.js",
+    "server": "node app.js",
     "dev": "NODE_ENV=develpment nodemon index.js"
   },
   "repository": {
