--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-elm-koa2",
+  "name": "react-music-koa2",
   "version": "1.0.0",
   "description": "Koa2搭建饿了么后端服务",
   "main": "index.js",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Mohannnnn/vue2-elm-koa2.git"
+    "url": "git+https://github.com/Mohannnnn/react-music-koa2.git"
   },
   "keywords": [
     "koa2"
@@ -18,9 +18,9 @@
   "author": "Mohannnnn",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Mohannnnn/vue2-elm-koa2/issues"
+    "url": "https://github.com/Mohannnnn/react-music-koa2/issues"
   },
-  "homepage": "https://github.com/Mohannnnn/vue2-elm-koa2#readme",
+  "homepage": "https://github.com/Mohannnnn/react-music-koa2#readme",
   "devDependencies": {},
   "dependencies": {
     "http-proxy-middleware": "^0.19.0",
