--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-music-koa2",
   "version": "1.0.0",
-  "description": "Koa2搭建饿了么后端服务",
+  "description": "Koa2搭建react-music后端服务",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
